k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: kubeadm-python-cluster
    app.kubernetes.io/component: namespace
    app.kubernetes.io/managed-by: manual
spec: {}
